@@ -9,6 +9,7 @@
 *.tar.gz
 aclocal.m4
 autom4te.cache/
+compile
 config.guess
 config.log
 config.status
