@@ -98,3 +98,6 @@
 	* Incremented the package version to 0.5.1.
 2015-12-31 Fred Gleason <fredg@paravelsystems.com>
 	* Added 'webhost.service.in'.
+2016-01-03 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed a bug in 'src/wh/whcgipost.cpp' that thew an error when
+	processing a CGI object with no POST fields.
